--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,18 +10,18 @@
   </head>
   <body>
     <div id="heading" class="box">
-      <h1> <%= date %> </h1>      
+      <h1> <%= listTitle %> </h1>      
     </div>
     <div class="box">
-      <% for(var i=0; i<item.length;i++){ %>
+      <% for(var i=0; i<list.length;i++){ %>
         <div class="item">
           <input type="checkbox">
-          <p> <%= item[i] %> </p>
+          <p> <%= list[i] %> </p>
         </div>
         <% } %>
         <form class ="item" action="/" method="POST">
           <input type="text" name="newItem" placeholder="New item" autocomplete="off">
-          <button type="submit" name="submitBttn">+</button>
+          <button type="submit" name="list" value=<%= listTitle %>>+</button>
         </form>
     </div>
       
