--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -112,3 +112,17 @@ footer {
   color: rgba(0, 0, 0, 0.5);
   text-align: center;
 }
+
+#brand {
+  font-size: 3rem;
+  font-weight: 900;
+  text-decoration: none;
+  color: aqua;
+}
+
+#date {
+  text-align: right;
+}
+table{
+  width: 100%;
+}
