--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Taskl</title>
+    <title>TASKL.</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;700;900&family=Old+Standard+TT:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
   </head>
   <body>
