--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,6 +9,7 @@
       <div class="item">
         <form action="/delete" method="POST">
           <input type="checkbox" name="checkbox" value="<%= item._id %>" onChange="this.form.submit()">
+          <input type="hidden" name="listName" value="<%= listTitle %>">
         </form>
           <p> <%= item.task %> </p>
       </div>
@@ -16,7 +17,7 @@
 
     <form class ="item" action="/" method="POST">
       <input type="text" name="newItem" placeholder="New item" autocomplete="off">
-      <button type="submit" name="list" value=<%= listTitle %>>+</button>
+      <button type="submit" name="list" value="<%= listTitle %>">+</button>
     </form>
   </div>
 
