--- a/views/list.ejs
+++ b/views/list.ejs
@@ -11,7 +11,7 @@
           <input type="checkbox" name="checkbox" value="<%= item._id %>" onChange="this.form.submit()">
           <input type="hidden" name="listName" value="<%= listTitle %>">
         </form>
-          <p> <%= item.task %> </p>
+          <p> <%= item %> </p>
       </div>
     <% })); %>
 
