--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,11 +5,11 @@
   </div>
   
   <div class="box">
-    <% list.forEach((item => { %>
+    <% list.items.forEach((item => { %>
       <div class="item">
         <form action="/delete" method="POST">
-          <input type="checkbox" name="checkbox" value="<%= item._id %>" onChange="this.form.submit()">
-          <input type="hidden" name="listName" value="<%= listTitle %>">
+          <input type="checkbox" name="checkbox" value="<%= list._id %>" onChange="this.form.submit()">
+          <input type="hidden" name="listName" value="<%= list.name %>">
         </form>
           <p> <%= item %> </p>
       </div>
@@ -17,7 +17,8 @@
 
     <form class ="item" action="/" method="POST">
       <input type="text" name="newItem" placeholder="New item" autocomplete="off">
-      <button type="submit" name="list" value="<%= listTitle %>">+</button>
+      <input type="hidden" name="userID" value="<%= userID %>"/>
+      <button type="submit" name="list" value="<%= list._id %>">+</button>
     </form>
   </div>
 
