--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -9,7 +9,7 @@
     <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
     <button class="w-100 btn btn-lg btn-outline-light" type="submit">Sign Up</button>
     <p style="text-align: center; font-size: 0.7rem;">OR</p>
-    <a href="auth/google" class="w-100 btn btn-lg btn-block btn-social btn-google" type="submit" role="button"><i class="fab fa-google"></i>Sign up with Google</a>
+    <a href="/auth/google" class="w-100 btn btn-lg btn-block btn-social btn-google" type="submit" role="button"><i class="fab fa-google"></i>Sign up with Google</a>
     <p class="registered text-muted"->Already registered? <a class="sign-redirect" href="/sign-in">Log In</a></p>
   </form>
 </main>
