--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,16 +15,32 @@
     <!-- Social Buttons -->
     <link rel="stylesheet" href="css/bootstrap-social.css">
     <!-- My stylesheet -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css"> 
   </head>
   <body>
-    <table>
-      <tr>
-        <td>
-          <a id="brand" href="/">TASKL.</a>
-        </td>
-        <td id="date">
-          <p><%= date %></p>
-        </td>
-      </tr>
-    </table>
+    <div class="container-fluid">
+      <table>
+        <tr>
+          <td>
+            <a id="brand" href="/">TASKL.</a>
+          </td>
+          <td id="date">
+            <p>
+              <%= date %>
+            </p>
+          </td>
+        </tr>
+      </table>
+      <div id="header-dropdown" class="dropdown">
+        <a id="header-dropdown-link" class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"></a>
+        <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuLink">
+          <% if( auth == true){ %>
+            <li><a class="dropdown-item" href="/logout">Logout</a></li>  
+          <% } %>
+          <% if( auth == false){ %>
+            <li><a class="dropdown-item" href="/login">Log in</a></li>
+            <li><a class="dropdown-item" href="/sign-up">Register</a></li>  
+          <% } %>
+
+        </ul>
+      </div>
