--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,7 +1,8 @@
 
-    <footer>
-      Copyright TASKL.
-    </footer>
+      <footer>
+        Copyright TASKL.
+      </footer>
+    </div> <!--container-fluid -->
     <!-- Bootstrap JS bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
