Add default list when registering user.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,6 +31,9 @@ p {
 #title.new-list-name {
   margin: 50px auto;
 }
+.box.empty-list {
+  margin: 50px auto;
+}
 
 /* LISTS STYLE */
 #button-add {
