--- a/views/empty-lists.ejs
+++ b/views/empty-lists.ejs
@@ -1,6 +1,6 @@
 <%- include("header"); -%>
 
-<div class="box">
+<div class="box empty-list">
   <p class="no-list-text">
     Seems like you don't have any Task List yet.<br>Create new lists and start organizing your tasks. <br><br>
     <a class="new-list" href="/new-list"> <i class="fas fa-list"></i> Create new list </a>
