--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,7 +1,7 @@
 <%- include("header"); -%>
   
   <div class="row">
-    <div class="col-4">
+    <div class="col-12 col-md-4">
         <nav class="lists navbar navbar-dark bg-dark">
           <div class="container-fluid">
             <a class="navbar-brand" href="/">Lists</a>
@@ -23,7 +23,7 @@
           </div>
         </nav>
     </div>
-    <div class="col-8">
+    <div class="col-12 col-md-8">
       <div id="title" class="box">
         <h1> 
           <%= lists[listIndex].name %> 
