Add login button in the first page.

--- a/views/get-started.ejs
+++ b/views/get-started.ejs
@@ -6,6 +6,7 @@
     <p class="initial-text"> Make multiple lists to keep focused on what matters at the moment.</p>
     <p class="initial-text">
       <a class="btn btn-lg btn-light" href="/sign-up" role="button">Get Started</a>
+      <a class="btn btn-lg btn-outline-light" href="/login" role="button">Log In</a>
     </p>
   </div>
   <div class="col-12 col-md-5">
