[refactoring] Reorganize folder structure and fix paths to start refactoring the application.

--- a/src/views/get-started.ejs
+++ b/src/views/get-started.ejs
@@ -10,7 +10,7 @@
     </p>
   </div>
   <div class="col-12 col-md-5">
-    <img id="home-img" src="images/checklist.svg" alt="checklist-image">
+    <img id="home-img" src="/images/checklist.svg" alt="checklist-image">
   </div>
 </div>
 
