--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TASKL.</title>
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400;700;900&family=Old+Standard+TT:wght@400;700&display=swap" rel="stylesheet">
@@ -13,9 +13,9 @@
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
     <!-- Social Buttons -->
-    <link rel="stylesheet" href="css/bootstrap-social.css">
+    <link rel="stylesheet" href="/css/bootstrap-social.css" type="text/css">
     <!-- My stylesheet -->
-    <link rel="stylesheet" href="/css/styles.css"> 
+    <link rel="stylesheet" href="/css/styles.css" type="text/css"> 
   </head>
   <body>
     <div class="container-fluid">
