[refactoring] Replace routes related to list and adjust paths that changed.

--- a/src/views/empty-lists.ejs
+++ b/src/views/empty-lists.ejs
@@ -3,7 +3,7 @@
 <div class="box empty-list">
   <p class="no-list-text">
     Seems like you don't have any Task List yet.<br>Create new lists and start organizing your tasks. <br><br>
-    <a class="new-list" href="/new-list"> <i class="fas fa-list"></i> Create new list </a>
+    <a class="new-list" href="/lists/create"> <i class="fas fa-list"></i> Create new list </a>
   </p>
 </div>  
 
