--- a/src/views/new-list.ejs
+++ b/src/views/new-list.ejs
@@ -1,7 +1,7 @@
 <%- include("header"); -%>
 
 <div id="title" class="new-list-name box">
-  <form action="/new-list" method="POST">
+  <form action="/lists/create" method="POST">
     <input type="text" name="listName" placeholder="List name" autocomplete="off" autofocus="yes">
   </form>      
 </div>
