--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -1,6 +1,6 @@
 
       <footer>
-        Copyright TASKL.
+        <span id="copyright">©</span> 2020, edlc.
       </footer>
     </div> <!--container-fluid -->
     <!-- Bootstrap JS bundle -->
