--- a/src/views/header.ejs
+++ b/src/views/header.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="NXzN63QrCQCtk5H7HICbMNsZohbmNazEMimn5YnParQ" />
     <title>TASKL.</title>
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <!-- Google fonts -->
