--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -140,14 +140,17 @@ table{
 }
 
 /* FOOTER */
-footer {
-  color: rgba(0, 0, 0, 0.5);
-  font-family: 'Courier New', monospace;
+.footer {
+  /* color:6442644264*/
+  color: rgba(0, 0, 0, 0.4);
+  font-family: 'VT323', monospace;
   text-align: center;
+  margin: 5% 0 1% 0;
+  font-size: 1rem;
 }
-#copyright {
-  font-weight: bold;
-  font-size: 1.1rem;
+.footer a {
+  color: inherit;
+  text-decoration: none;
 }
 
 /* SIGN PAGE */
