--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -1,7 +1,7 @@
 
-      <footer>
-        <span id="copyright">©</span> 2020, edlc.
-      </footer>
+      <div class="footer">
+        <a href='https://github.com/playeredlc' target="_blank"><i>&lt/&gt</i> edlc</a>, 2021.
+      </div>
     </div> <!--container-fluid -->
     <!-- Bootstrap JS bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
